src-tauri/test_error.txt
cargo : warning: value assigned to 
`recovered_count` is never read
At line:1 char:1
+ cargo test metadata::comfyui::tests
::repro_issue_sampler_prompt 2>&1  
...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpe 
   cified: (warning: value ...` is   
  never read:String) [], RemoteExc   
 eption
    + FullyQualifiedErrorId : Native 
   CommandError
 
   --> src\db\commands.rs:758:17
    |
758 | ... mut recovered_count = 0;...
    |         ^^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten 
before being read?
    = note: 
`#[warn(unused_assignments)]` (part 
of `#[warn(unused)]`) on by default

warning: unreachable pattern
  --> src\watcher.rs:60:21
   |
55 | /                     
notify::EventKind::Create(_)
56 | |                     | 
notify::EventKind::Modify(_)
57 | |                     | notify::
EventKind::Access(notify::event::Acce
ssKind::Close(_)) =>...
   | |_______________________________
_____________________________________
________________- matches all the 
relevant values
...
60 |                       
not...ifyKind::Name(_)) => true,
   |                       
^^^...^^^^^^^^^^^^^^^^^ no value can 
reach this
   |
   = note: 
`#[warn(unreachable_patterns)]` 
(part of `#[warn(unused)]`) on by 
default

   Compiling app v0.1.0 (D:\AI\WebDev
\project-ambit-alpha\src-tauri)
warning: `app` (lib) generated 2 
warnings
warning: unused import: `metadata::mo
dels::ModelResolutionState`
 --> src\lib.rs:8:5
  |
8 | use metadata::models::ModelResolu
tionState;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` 
(part of `#[warn(unused)]`) on by 
default

warning: unused import: 
`watcher::WatcherState`
 --> src\lib.rs:9:5
  |
9 | use watcher::WatcherState;
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: value assigned to 
`recovered_count` is never read
   --> src\db\commands.rs:758:17
    |
758 |         let mut 
recovered_count = 0; // Not 
explicitly tracking 
previously-missing
    |                 ^^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten 
before being read?
    = note: 
`#[warn(unused_assignments)]` (part 
of `#[warn(unused)]`) on by default

error[E0609]: no field `scheduler` 
on type `metadata::ImageMetadata`
  --> src\metadata\comfyui\tests\repr
o_issue_sampler_prompt.rs:16:45
   |
16 |     println!("Detected 
Scheduler: {}", meta.scheduler);
   |                                 
            ^^^^^^^^^ unknown field
   |
   = note: available fields are: 
`tool`, `model`, `raw_parameters`, 
`steps`, `cfg` ... and 22 others

error[E0609]: no field `scheduler` 
on type `metadata::ImageMetadata`
  --> src\metadata\comfyui\tests\repr
o_issue_sampler_prompt.rs:22:21
   |
22 |     assert_eq!(meta.scheduler, 
"karras");
   |                     ^^^^^^^^^ 
unknown field
   |
   = note: available fields are: 
`tool`, `model`, `raw_parameters`, 
`steps`, `cfg` ... and 22 others

warning: variable does not need to 
be mutable
   --> src\db\facets.rs:681:13
    |
681 |         let mut conn = rusqlite
::Connection::open_in_memory().unwrap
();
    |             ----^^^^
    |             |
    |             help: remove this 
`mut`
    |
    = note: `#[warn(unused_mut)]` 
(part of `#[warn(unused)]`) on by 
default

warning: unreachable pattern
  --> src\watcher.rs:60:21
   |
55 | /                     
notify::EventKind::Create(_)
56 | |                     | 
notify::EventKind::Modify(_)
57 | |                     | notify::
EventKind::Access(notify::event::Acce
ssKind::Close(_)) => true,
   | |_______________________________
_____________________________________
________________- matches all the 
relevant values
...
60 |                       notify::Ev
entKind::Modify(notify::event::Modify
Kind::Name(_)) => true,
   |                       ^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^ no value can reach 
this
   |
   = note: 
`#[warn(unreachable_patterns)]` 
(part of `#[warn(unused)]`) on by 
default

For more information about this 
error, try `rustc --explain E0609`.
warning: `app` (lib test) generated 
5 warnings
error: could not compile `app` (lib 
test) due to 2 previous errors; 5 
warnings emitted
